Name:                   plow-extras-aeson
Version:                0.2.0
Author:                 Lingpo Huang <lingpo.huang@plowtech.net>
Maintainer:             Lingpo Huang <lingpo.huang@plowtech.net>
License:                BSD3
License-File:           LICENSE
Synopsis:               An extras library for json functions	 
Description:            Currently Plow.Extras.Aeson contains:
                        typeToText -- a function to convert type to Text
                        valueToText -- a function to convert Value to Text
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Plow.Extras.Aeson
  Other-Modules:        Plow.Extras.Aeson.Internal
  Build-Depends:        base >= 4 && < 5
                      , aeson
                      , text

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Other-Modules:        Plow.Extras.AesonSpec
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/plow-extras.git	       
