Name:                   plow-extras-lens
Version:                1.0.2
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               plow-extras-lens is a small collection of packages that depend on lens and base 
Description:            Plow.Extras.Lens No specific lens dep. but I would suggest using >= 0.4.* 
                        
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall 
  Exposed-Modules:      Plow.Extras.Lens
  Other-Modules:        Plow.Extras.Lens.Internal
  Build-Depends:        base >= 4 && < 5
                      , template-haskell
                      , lens >= 4.3.3
                      , mtl

-- Test-Suite spec
--   Type:                 exitcode-stdio-1.0
--   Default-Language:     Haskell2010
--   Hs-Source-Dirs:       src
--                       , test
--   Ghc-Options:          -Wall
--   Main-Is:              Spec.hs
--   Build-Depends:        base
--                       , hspec

Source-Repository head
  Type:                 git
  Location:               https://github.com/plow-technologies/plow-alarm.git
