Name:                   plow-extras-time
Version:                0.1.0
Author:                 Lingpo Huang <lingpo.huang@plowtech.net>
Maintainer:             Lingpo Huang <lingpo.huang@plowtech.net>
License:                BSD3
License-File:           LICENSE
Synopsis:               An extras library for time functions
Description:            Curently Plow.Extras.Time contains:
                        utcTimeToInt -- a function to convert utcTime to Int
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Plow.Extras.Time
  Other-Modules:        Plow.Extras.Time.Internal
  Build-Depends:        base >= 4 && < 5,
                        time
                        

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , time

Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/plow-extras.git 
