Name:                   plow-extras-time
Version:                0.2.1
Author:                 Lingpo Huang <lingpo.huang@plowtech.net>
Maintainer:             Lingpo Huang <lingpo.huang@plowtech.net>
License:                BSD3
License-File:           LICENSE
Synopsis:               An extras library for time functions
Description:            Curently Plow.Extras.Time contains:
                        utcTimeToInt -- a function to convert utcTime to Int
                        intToUTCTime -- a function to convert int to UTCTime
                        diffTimeToInt -- a function to convert DiffTime to Int
                        intToDiffTime -- a function to convert Int to DiffTime

Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Plow.Extras.Time
                      , Plow.Extras.Time.Crontab
  Build-Depends:        base >= 4 && < 5,
                        time
                        

test-suite plow-extras-time-test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Main.hs
  Build-Depends: base >= 4 && < 5
               , plow-extras-time
               , tasty
               , tasty-quickcheck
               , quickcheck-instances
               , time

Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/plow-extras.git 
